plugins {
	id 'java-library'
	id 'maven-publish'
	id 'net.neoforged.moddev' version '2.0.141'
	id 'idea'
}

version = project.mod_version
group = project.maven_group

repositories {
	maven {
		name = 'Fabric'
		url = 'https://maven.fabricmc.net/'
	}
	maven {
		name = 'NeoForged'
		url = 'https://maven.neoforged.net/releases'
	}
	mavenCentral()
}

dependencies {
	// NeoForge dependencies are handled by the neoForge configuration
}

base {
	archivesName = project.mod_id
}

java {
	toolchain.languageVersion = JavaLanguageVersion.of(21)
	withSourcesJar()
}

neoForge {
	version = project.neo_version
	accessTransformers.from("src/main/resources/META-INF/accesstransformer.cfg")


	parchment {
		mappingsVersion = project.parchment_mappings_version
		minecraftVersion = project.parchment_minecraft_version
	}

	runs {
		client {
			client()
			jvmArgument '--add-opens=java.base/java.lang=ALL-UNNAMED'
		}
		server {
			server()
			programArgument '--nogui'
			jvmArgument '--add-opens=java.base/java.lang=ALL-UNNAMED'
		}
	}

	mods {
		"${project.mod_id}" {
			sourceSet sourceSets.main
		}
	}
}

project.ext.lwjglVersion = "3.3.3"
project.ext.jomlVersion = "1.10.4"
project.ext.winNatives = "natives-windows"
project.ext.linuxNatives = "natives-linux"
project.ext.macosNatives = "natives-macos"
project.ext.macosArmNatives = "natives-macos-arm64"

dependencies {
	implementation("org.lwjgl:lwjgl-vulkan:$lwjglVersion")

	ext.addNatives = { name ->
		implementation("$name:$lwjglVersion")
		runtimeOnly("$name:$lwjglVersion:$winNatives")
		runtimeOnly("$name:$lwjglVersion:$linuxNatives")
		runtimeOnly("$name:$lwjglVersion:$macosNatives")
		runtimeOnly("$name:$lwjglVersion:$macosArmNatives")
	}

	addNatives("org.lwjgl:lwjgl-vma")
	addNatives("org.lwjgl:lwjgl-shaderc")

	runtimeOnly("org.lwjgl:lwjgl-vulkan:$lwjglVersion:$macosNatives")
	runtimeOnly("org.lwjgl:lwjgl-vulkan:$lwjglVersion:$macosArmNatives")
}

processResources {
	var replaceProperties = [
			mod_id            : project.mod_id,
			mod_name          : project.mod_name,
			mod_version       : project.mod_version,
			mod_authors       : project.mod_authors,
			mod_description   : project.mod_description,
			mod_license       : project.mod_license,
			neo_version_range : project.neo_version_range,
			minecraft_range   : project.minecraft_range
	]

	inputs.properties replaceProperties
	filesMatching("META-INF/neoforge.mods.toml") {
		expand replaceProperties
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.mod_id}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.mod_id
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
